// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageViewer > ImageViewer baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      基础图片预览
      
    </span>
    <!---->
  </button>
  <!---->
  
</div>
`;

exports[`ImageViewer > ImageViewer mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-ef8302fa=""
>
  <h1
    class="title"
    data-v-ef8302fa=""
  >
    ImageViewer 图片预览
  </h1>
  <p
    class="summary"
    data-v-ef8302fa=""
  >
    图片全屏放大预览效果，包含全屏背景色、页码位置样式、增加操作等规范
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-ef8302fa=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        图片预览类型
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          基础图片预览
          
        </span>
        <!---->
      </button>
      <!---->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-ef8302fa=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        图片预览类型，可设置垂直对齐方式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
           基础图片预览 + 对齐方式 
          
        </span>
        <!---->
      </button>
      <!---->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-ef8302fa=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带操作图片预览
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带操作图片预览
          
        </span>
        <!---->
      </button>
      <!---->
      
      
    </div>
  </div>
</div>
`;

exports[`ImageViewer > ImageViewer operationVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带操作图片预览
      
    </span>
    <!---->
  </button>
  <!---->
  
</div>
`;
